# main_api

./: .env  Cargo.toml  cheatSheet.txt
src/: endpoints.rs  main.rs  models.rs  services.rs
src/endpoints/: auth_user.rs  user_crud.rs
src/models/: api_response.rs  sessions.rs  user.rs
src/services/: session_service.rs  user_service.rs
