[package]
name = "authedication_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
redis = {version = "0.21.5", features =["tokio-comp"]}
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0.68"
chrono = "0.4"



[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]